--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "check:eslint": "eslint --max-warnings 0 .",
+    "check:prettier": "prettier --check .",
+    "check:unused-exports": "ts-unused-exports ./tsconfig.json",
+    "check": "yarn check:unused-exports && yarn check:prettier && yarn check:eslint"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +43,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^8.9.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-sonarjs": "^0.12.0",
+    "prettier": "^2.5.1",
+    "ts-unused-exports": "^8.0.0"
   }
 }
